<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jobsity.tvmaze.detail.DetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/main_photo_image"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:imageUrl="@{viewModel.selectedSerie.show.image.original}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/serie_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:maxLines="2"
                android:text="@{viewModel.displaySerieName}"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/main_photo_image"
                app:layout_constraintTop_toBottomOf="@+id/favbtn"
                tools:text="@string/display_namedetail" />

            <TextView
                android:id="@+id/days_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/days_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/serie_name_text"
                app:layout_constraintTop_toBottomOf="@+id/serie_name_text"
                tools:text="@string/days_title" />

            <TextView
                android:id="@+id/days_value_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:text="@{viewModel.displaySerieDays}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/days_value"
                app:layout_constraintTop_toBottomOf="@+id/days_value"
                tools:text="@string/display_daysdetail" />

            <TextView
                android:id="@+id/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/time_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/serie_name_text"
                app:layout_constraintTop_toBottomOf="@+id/days_value_text"
                tools:text="@string/time_title" />

            <TextView
                android:id="@+id/time_value_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lines="2"
                android:text="@{viewModel.displaySerieTime}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/time_value"
                app:layout_constraintTop_toBottomOf="@+id/days_value_text"
                tools:text="@string/display_timedetail" />

            <TextView
                android:id="@+id/genres_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/genres_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_photo_image"
                tools:text="@string/genres_title" />

            <TextView
                android:id="@+id/genres_value_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:text="@{viewModel.displaySerieGenres}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/genres_value"
                app:layout_constraintTop_toBottomOf="@+id/genres_value"
                tools:text="@string/display_genredetail" />

            <TextView
                android:id="@+id/summary_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/summary_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genres_value_text"
                tools:text="@string/summary_title" />

            <TextView
                android:id="@+id/summary_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.displaySerieSummary}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_value"
                tools:text="@string/display_summarydetail" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/episodes_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:padding="6dp"
                app:episodeData="@{viewModel.episodes}"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_value_text"
                app:spanCount="1"
                tools:itemCount="16"
                tools:listitem="@layout/grid_view_item" />

            <CheckBox
                android:id="@+id/favbtn"
                style="?android:attr/starStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.displaySerieFavorite}"
                android:onClick="@{() -> viewModel.onStartFavorite()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>