<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jobsity.tvmaze.person.PersonViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/main_photo_image"
                android:layout_width="0dp"
                android:layout_height="266dp"
                android:scaleType="centerCrop"
                app:imageUrl="@{viewModel.selectedPerson.person.image.medium}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/serie_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.displayPersonName}"
                android:textSize="39sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_photo_image"
                tools:text="@string/display_namedetail" />

            <TextView
                android:id="@+id/days_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/genre_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serie_name_text"
                tools:text="@string/genre_title" />

            <TextView
                android:id="@+id/days_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.displayPersonGenre}"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/days_value"
                app:layout_constraintTop_toBottomOf="@+id/serie_name_text"
                tools:text="@string/genre_detail" />


            <!--            <androidx.recyclerview.widget.RecyclerView-->
            <!--                android:id="@+id/episodes_grid"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:padding="6dp"-->
            <!--                android:clipToPadding="false"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/days_value_text"-->
            <!--                app:spanCount="2"-->
            <!--                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"-->
            <!--                app:episodeData="@{viewModel.shows}"-->
            <!--                tools:itemCount="16"-->
            <!--                tools:listitem="@layout/grid_view_item" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>